--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -48,10 +48,15 @@ httpx==0.28.1
 huggingface-hub==0.31.2
 idna==3.10
 inquirerpy==0.3.4
+ipykernel==6.29.5
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 jieba3k==0.35.1
 Jinja2==3.1.6
 joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.8
 langcodes==3.5.0
 langdetect==1.0.9
@@ -103,6 +108,7 @@ python-dotenv==1.1.0
 python-engineio==4.12.0
 python-multipart==0.0.20
 pytz==2025.2
+pywin32==310
 PyYAML==6.0.2
 pyzmq==26.4.0
 RapidFuzz==3.13.0
